tests/error/bad_array_notation.ca

f = {
    -- This caused an interpreter crash at one point
    1[1] = 1
}

actor = make_actor(f.block)
actor.call
assert(actor.errored)
